2025: fixing resume readability

--- a/2025/css/2025.css
+++ b/2025/css/2025.css
@@ -278,9 +278,10 @@ nn-pilar.workarea {
   }
 
   mr-resume {
+    --border-color: #bbb;
+
     nn-caja {
       box-shadow: 0 0 14px #000;
-
       background-color: #fff;
 
       li,
@@ -307,12 +308,6 @@ nn-pilar.workarea {
       h6 {
         margin: 0;
         margin-block-end: var(--space-between-block-items);
-      }
-
-      h1,
-      h2,
-      h3 {
-        font-weight: 300;
       }
 
       ul,
@@ -346,6 +341,7 @@ nn-pilar.workarea {
         margin: 0;
         font-size: 2rem;
         text-transform: uppercase;
+        font-weight: 400;
         /* letter-spacing: 2px; */
       }
 
@@ -353,11 +349,13 @@ nn-pilar.workarea {
         font-size: 1.1rem;
         text-transform: uppercase;
         text-align: left;
+        font-weight: 400;
         margin-bottom: 0.5rem;
       }
 
       h3 {
         margin: 0;
+        font-weight: 400;
         font-size: .87rem;
         text-transform: uppercase;
         display: flex;
@@ -367,7 +365,7 @@ nn-pilar.workarea {
       h4 {
         font-size: .75rem;
         text-transform: uppercase;
-        font-weight: 300;
+        font-weight: 400;
         letter-spacing: 0;
         margin-bottom: .5rem;
       }
@@ -376,7 +374,7 @@ nn-pilar.workarea {
         font-style: normal;
         font-size: .75rem;
         text-transform: uppercase;
-        font-weight: 300;
+        font-weight: 400;
       }
 
       a {
@@ -389,15 +387,16 @@ nn-pilar.workarea {
 
       header {
         text-align: center;
-        border-bottom: 1px dotted #202028;
-        padding: 2rem;
+        border-bottom: 1px dotted var(--border-color);
+        padding: 1.5rem 0;
         margin-block-end: 2rem;
 
         p {
           font-size: 1rem;
           text-transform: uppercase;
           margin: 0;
-          font-weight: 300;
+          font-weight: 400;
+          /* color: #939393; */
         }
       }
 
@@ -412,11 +411,11 @@ nn-pilar.workarea {
           top: 1.45rem;
           left: -.05rem;
           height: calc(100% - .5rem);
-          border-left: 1px dotted #202028;
+          border-left: 1px dotted var(--border-color);
         }
 
         time {
-          font-weight: 300;
+          font-weight: 400;
           letter-spacing: 2px;
           display: inline-block;
           font-size: .75rem;
@@ -428,6 +427,7 @@ nn-pilar.workarea {
           top: .25rem;
           left: -.25rem;
           font-size: .5rem;
+          color: var(--border-color);
         }
       }
     }
